# semver

./: .gitignore  ChangeLog.md  Main.hs  Makefile  Semver.hs  semver.cabal
src/: Main.hs  NanoParsec.hs  Semver.hs
